<resources>
    <string name="app_name">IIT Bazaar</string>
    <string name="search_query_hint">&#160;IIT Bazaar Search</string>

    <string name="space">&#160;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="signin_text">Please use your portal account to sign in.</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>

    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <string-array name="refresh_array">
        <item>Every Minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>Every Hour</item>
    </string-array>

</resources>
