<?xml version="1.0" encoding="utf-8"?>
<!-- author Janusz M Nosek - jnosek@hawk.iit.edu -->
<!-- lays out the login activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iit_red"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/bypass_button_fragment_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bypass Logon"
            android:id="@+id/bypass"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp" /-->


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"

            android:layout_gravity="center_horizontal"/>
        <!-- android:layout_marginTop="@dimen/g_top_margin" -->



        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"

            android:contentDescription="@string/desc_google_icon"
            android:src="@drawable/login_icon" />



        <TextView
            android:id="@+id/signin_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:text="@string/signin_text"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


    </LinearLayout>



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/iit_red_dark">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="2"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/disconnect_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect"
                android:textColor="@android:color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
